# sdl-game-engine

./: CMakeLists.txt  Compile Command.txt  New Text Document.bat  a_star_search.c  a_star_search.h  artificial_opp.c  artificial_opp.h  blocks.c  blocks.h  board.c  board.h  bullet.c  bullet.h  file_handling.c  file_handling.h  game-flight.txt  game-maze.txt  game-pacman.txt  game.c  game.h  game.txt  game_console.c  game_console.h  game_console_command.bat  game_menu.c  game_menu.h  graphics.c  graphics.h  heap.c  heap.h  linked_list.c  linked_list.h  main.c  map-flight.txt  map-maze.txt  map-pacman.txt  map.txt  map2.txt  map_handling.c  map_handling.h  (+21 more)
videos/: game_over.mkv  intro.mkv  win.mkv
